<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="originSelector" type="id"/>
    <item name="destinationSelector" type="id"/>
    <item name="swap_button" type="id"/>
    <item name="result_view" type="id"/>
    <item name="calling_point" type="id"/>
    <item name="scheduled_time" type="id"/>
    <item name="estimated_time" type="id"/>
    <item name="favourite_button" type="id"/>
    <item name="favourite_origin" type="id"/>
    <item name="favourite_right_arrow" type="id"/>
    <item name="favourite_dest" type="id"/>
    <item name="search_view" type="id"/>
    <item name="service_result" type="id"/>
    <item name="service_title" type="id"/>
    <item name="service_detail" type="id"/>
    <item name="favourites_list" type="id"/>
</resources>