<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.licensem.nitraintracker.MainActivity">

    <Button
            android:text="Search Train Times"
            android:layout_width="245dp"
            android:layout_height="65dp"
            android:gravity="center"
            android:layout_marginHorizontal="8dip"
            android:id="@+id/search_button"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:onClick="startSearch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:elevation="12dp"
    />

    <TextView
            android:id="@+id/favourites_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/search_button"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="Favourites"
            android:textSize="11pt"
    />

    <ListView
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:id="@+id/favourites_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favourites_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_weight="1"
    />

</android.support.constraint.ConstraintLayout>
